objects/Course__c.object
<CustomObject>
    <description>Course Object</description>
    <fields>
        <fullName>Affiliation__c</fullName>
        <description>Affiliation University</description>
        <inlineHelpText>Affiliation University</inlineHelpText>
        <label>Affiliation</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bangalore University</fullName>
                </value>
                <value>
                    <fullName>Delhi University</fullName>
                </value>
                <value>
                    <fullName>Mumbai University</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Category__c</fullName>
        <description>Course Category</description>
        <inlineHelpText>Course Category</inlineHelpText>
        <label>Course Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Physics</fullName>
                </value>
                <value>
                    <fullName>Chemistry</fullName>
                </value>
                <value>
                    <fullName>Economics</fullName>
                </value>
                <value>
                    <fullName>Biology</fullName>
                </value>
                <value>
                    <fullName>History</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Faculty__c</fullName>
        <description>Course Faculty</description>
        <inlineHelpText>Course Faculty</inlineHelpText>
        <label>Course Faculty</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Course_Category__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Course_Faculty_Global_List</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <description>Course Name</description>
        <inlineHelpText>Course Name</inlineHelpText>
        <label>Course Name</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <description>Duration of the course</description>
        <inlineHelpText>Duration of the course</inlineHelpText>
        <label>Duration</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1-2 Months</fullName>
                </value>
                <value>
                    <fullName>5-6 Months</fullName>
                </value>
                <value>
                    <fullName>8-9 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Exam_needed__c</fullName>
        <label>Exam needed ?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Fee__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <description>Fee of the course</description>
        <inlineHelpText>Fee of the course</inlineHelpText>
        <label>Fee</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Affiliation__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$300</fullName>
                </value>
                <value>
                    <fullName>$400</fullName>
                </value>
                <value>
                    <fullName>$500</fullName>
                </value>
                <value>
                    <fullName>$600</fullName>
                </value>
                <value>
                    <fullName>$700</fullName>
                </value>
                <value>
                    <fullName>$800</fullName>
                </value>
                <value>
                    <fullName>$900</fullName>
                </value>
                <value>
                    <fullName>$1000</fullName>
                </value>
                <value>
                    <fullName>$1100</fullName>
                </value>
                <value>
                    <fullName>$1200</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Course</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>C-{0000}</displayFormat>
        <label>CourseID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Courses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>